[project]
name = "fhir-mcp-server-medagentbench"
dynamic = ["version", "description"]
authors = [{ name = "Mike Holcomb", email = "michael.holcomb@utsouthwestern.edu" }]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MikeHolcomb/mcp-fhir-python-medagentbench"
"Bug Tracker" = "https://github.com/MikeHolcomb/mcp-fhir-python-medagentbench/issues"


[build-system]
# Use poetry-core for the build system
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fhir-mcp-server-medagentbench"
version = "0.1.0"
description = "MCP Server for FHIR operations (MedAgentBench)"
# Correct authors format for tool.poetry
authors = ["Mike Holcomb <michael.holcomb@utsouthwestern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
# Set correct Python version and add dependencies
python = ">=3.10"
mcp = "^1.5.0"

[tool.poetry.scripts]
fhir-mcp-server-medagentbench = "src.fhir_mcp_server_medagentbench.main:run"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0" # Relax constraint slightly
pytest-asyncio = "^0.23" # Relax constraint slightly
mock = "^5.1.0"
httpx = "^0.27.0"
anyio = "^4.0" # Add anyio explicitly
pre-commit = "^3.7.1"
isort = "^5.13.2"
black = "^24.4.2"
flake8 = "^7.1.0"
mypy = "^1.10.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

[tool.black]
line-length = 88
target-version = ['py310'] # Matches your python = ">=3.10"

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true # Often useful to start with
# Add specific module ignores if necessary, e.g.:
# [[tool.mypy.overrides]]
# module = "some_dependency.*"
# ignore_missing_imports = true
